--- a/package.json
+++ b/package.json
@@ -28,13 +28,13 @@
     "ember-auto-import": "^1.5.3",
     "ember-cli": "~3.24.0",
     "ember-cli-app-version": "^3.2.0",
-    "ember-cli-babel": "^7.19.0",
+    "ember-cli-babel": "^7.26.3",
     "ember-cli-dependency-checker": "^3.2.0",
-    "ember-cli-fastboot": "^2.2.3",
+    "ember-cli-fastboot": "^3.2.0-beta.2",
     "ember-cli-htmlbars": "^5.0.0",
     "ember-cli-inject-live-reload": "^2.0.2",
     "ember-cli-sri": "^2.1.1",
-    "ember-cli-uglify": "^3.0.0",
+    "ember-cli-terser": "^4.0.1",
     "ember-data": "~3.24.0",
     "ember-export-application-global": "^2.0.1",
     "ember-fetch": "^8.0.1",
@@ -56,5 +56,8 @@
   },
   "ember": {
     "edition": "octane"
+  },
+  "dependencies": {
+    "ember-cli-integrated-fastboot": "0.0.3"
   }
 }
